--- a/src/Layout/Header/Header.module.css
+++ b/src/Layout/Header/Header.module.css
@@ -1,4 +1,3 @@
-/* Header.module.css */
 * {
   margin: 0;
   padding: 0;
@@ -10,7 +9,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  max-width: 80rem;
+  margin: 0 auto;
+  margin-top: 1rem;
+  box-shadow: 0px 2px 11px;
+  border-radius: 5px;
+  padding: 5px;
 }
+.logo h1 {
+  font-size: 2rem;
+  font-family: Helvetica;
+  font-style: oblique 40deg;
+}
+
 .nav_icon {
   display: none;
 }
@@ -35,9 +46,7 @@
   color: #fff;
   display: block;
 }
-/* Your existing styles */
 
-/* Responsive styles for mobile view */
 @media (max-width: 980px) {
   .nav_icon {
     display: block;
