--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -11,3 +11,24 @@
 .img img {
   width: 100%;
 }
+
+.text h1 {
+  font-size: clamp(1.5rem, 5vw, 4rem);
+}
+.text h1 span {
+  color: #3a94f5;
+}
+.text button {
+  background: #3c94f8;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  margin-top: 1rem;
+}
+@media screen and (max-width: 768px) {
+  .home {
+    flex-direction: column;
+    text-align: center;
+  }
+}
