--- a/src/pages/Job/Job.module.css
+++ b/src/pages/Job/Job.module.css
@@ -1,5 +1,3 @@
-/* Job.module.css */
-
 .singleCard {
   width: 100%;
   max-width: 300px;
@@ -8,13 +6,11 @@
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
   margin-bottom: 20px;
+  padding: 1rem;
 }
 
 .singleCard:hover {
   transform: translateY(-5px);
-}
-
-.cardContent {
 }
 
 .cardContent img {
@@ -23,6 +19,10 @@
   object-fit: cover;
   margin-right: 20px;
   text-align: center;
+}
+.img {
+  text-align: center;
+  width: 100%;
 }
 
 .text {
@@ -38,13 +38,6 @@
   margin-bottom: 5px;
   font-size: 1.2rem;
   color: #555;
-}
-
-.text h3 {
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .text p {
