--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,8 @@
   box-sizing: border-box;
   font-family: Poppins, sans-serif;
 }
+.container {
+  max-width: 1300px;
+  width: 90%;
+  margin: auto;
+}
