--- a/src/pages/Jobs/Jobs.module.css
+++ b/src/pages/Jobs/Jobs.module.css
@@ -4,3 +4,11 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
 }
+@media screen and (max-width: 768px) {
+  .card {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
