--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -10,10 +10,13 @@
 }
 .img img {
   width: 100%;
+  margin-top: 1rem;
 }
 
 .text h1 {
   font-size: clamp(1.5rem, 5vw, 4rem);
+  line-height: clamp(1.5rem, 5vw, 4rem);
+  margin: 1rem 0;
 }
 .text h1 span {
   color: #3a94f5;
