--- a/src/pages/Auth/Login/Login.module.css
+++ b/src/pages/Auth/Login/Login.module.css
@@ -4,10 +4,10 @@
   align-items: center;
 }
 .loginForm form {
-  max-width: 300px;
+  max-width: fit-content;
 }
 .login {
-  max-width: 400px;
+  width: fit-content;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
